# aoc_2024

./: .gitignore  .gitmodules  CMakeLists.txt  clean.sh  get_input.sh  run.sh
code/: CMakeLists.txt
code/api/days/: day.h  day01.h  day02.h  day03.h  day04.h  day05.h  day06.h  day07.h  day08.h  day09.h  day11.h  day12.h  day13.h  day14.h  day15.h  day16.h  day17.h  day18.h  day19.h  day20.h  day21.h  template.h
code/api/util/: print_fmt.h  read_input.h
code/src/: main.cpp
code/src/days/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  template.cpp
code/src/util/: read_input.cpp
code/test/: main.test.cpp
inputs/: .gitignore
src/: main.cpp
